--- a/reuse/reuse-300x250.css
+++ b/reuse/reuse-300x250.css
@@ -1,41 +1,57 @@
-/*-- fade out animation--*/
-@-webkit-keyframes fadeOut {
-  0%   { 
-    opacity: 1; 
-    -webkit-transform: translate(0,0);
+/*-- hide content--*/
+@-webkit-keyframes hideContent {
+  0%   {
+    visibility: hidden;
   }
   100% { 
+    visibility: hidden;
+  }
+}
+@-moz-keyframes hideContent {
+  0%   {
+    visibility: hidden;
+  }
+  100% { 
+    visibility: hidden;
+  }
+}
+@keyframes hideContent {
+  0%   {
+    visibility: hidden;
+  }
+  100% { 
+    visibility: hidden;
+  }
+}
+
+/*-- fade in only animation--*/
+@-webkit-keyframes fadeInOnly {
+  0%   { 
     opacity: 0; 
     -webkit-transform: translate(0,0);
   }
-}
-@-moz-keyframes fadeOut {
-  0%   { 
-    opacity: 1; 
-    -moz-transform: translate(0,0);
-  }
   100% { 
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
+  }
+}
+@-moz-keyframes fadeInOnly {
+  0%   { 
     opacity: 0; 
     -moz-transform: translate(0,0);
   }
-}
-@-o-keyframes fadeOut {
-  0%   { 
-    opacity: 1; 
-    -o-transform: translate(0,0);
-  }
   100% { 
-    opacity: 0; 
-    -o-transform: translate(0,0);
+    opacity: 1; 
+    -moz-transform: translate(0,0);
   }
 }
-@keyframes fadeOut {
+@keyframes fadeInOnly {
   0%   { 
-    opacity: 1; 
+    opacity: 0; 
     transform: translate(0,0);
   }
   100% { 
-    opacity: 0; 
+    opacity: 1; 
     transform: translate(0,0);
   }
 }
@@ -65,18 +81,6 @@
     visibility: visible;
   }
 }
-@-o-keyframes fadeIn {
-  0%   { 
-    opacity: 0; 
-    -o-transform: translate(0,0);
-    visibility: visible;
-  }
-  100% { 
-    opacity: 1; 
-    -o-transform: translate(0,0);
-    visibility: visible;
-  }
-}
 @keyframes fadeIn {
   0%   { 
     opacity: 0; 
@@ -90,518 +94,339 @@
   }
 }
 
-/*-- slide right to left animation--*/
-@-webkit-keyframes slideLeft {
-  0%   {
-    -webkit-transform: translate(0,0);
-    visibility: visible;
+/*-- fade out animation--*/
+@-webkit-keyframes fadeOut {
+  0%   { 
+    opacity: 1;
   }
   100% { 
-    -webkit-transform: translate(-300px,0);
-    visibility: visible;
+    opacity: 0; 
   }
 }
-@-moz-keyframes slideLeft {
-  0%   {
-    -moz-transform: translate(0,0);
-    visibility: visible;
+@-moz-keyframes fadeOut {
+  0%   { 
+    opacity: 1; 
   }
   100% { 
-    -moz-transform: translate(-300px,0);
-    visibility: visible;
+    opacity: 0; 
   }
 }
-@-o-keyframes slideLeft {
-  0%   {
-    -o-transform: translate(0,0);
-    visibility: visible;
+@keyframes fadeOut {
+  0%   { 
+    opacity: 1; 
   }
   100% { 
-    -o-transform: translate(-300px,0);
-    visibility: visible;
-  }
-}
-@keyframes slideLeft {
-  0%   {
-    transform: translate(0,0);
-    visibility: visible;
-  }
-  100% { 
-    transform: translate(-300px,0);
-    visibility: visible;
+    opacity: 0; 
   }
 }
 
-/*-- slide right to left with fade out animation--*/
-@-webkit-keyframes slideLeftFadeOut {
+
+/*-- fade in left --*/
+@-webkit-keyframes fadeInLeft {
   0%   {
+    visibility: visible;
+    -webkit-transform: translate(50px,0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
     -webkit-transform: translate(0,0);
     opacity: 1;
-    visibility: visible;
-  }
-  100% { 
-    -webkit-transform: translate(-300px,0);
-    opacity: 0;
-    visibility: visible;
   }
 }
-@-moz-keyframes slideLeftFadeOut {
+@-moz-keyframes fadeInLeft {
   0%   {
+    visibility: visible;
+    -moz-transform: translate(50px,0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
     -moz-transform: translate(0,0);
     opacity: 1;
-    visibility: visible;
-  }
-  100% { 
-    -moz-transform: translate(-300px,0);
-    opacity: 0;
-    visibility: visible;
   }
 }
-@-o-keyframes slideLeftFadeOut {
+@keyframes fadeInLeft {
   0%   {
-    -o-transform: translate(0,0);
-    opacity: 1;
     visibility: visible;
+    transform: translate(50px,0);
+    opacity: 0;
   }
   100% { 
-    -o-transform: translate(-300px,0);
-    opacity: 0;
     visibility: visible;
-  }
-}
-@keyframes slideLeftFadeOut {
-  0%   {
     transform: translate(0,0);
     opacity: 1;
-    visibility: visible;
-  }
-  100% { 
-    transform: translate(-300px,0);
-    opacity: 0;
-    visibility: visible;
   }
 }
 
-/*-- slide right to left animation--*/
-@-webkit-keyframes slideLeft2 {
+/*-- fade in up --*/
+@-webkit-keyframes fadeInUp {
   0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,10px);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadeInUp {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,10px);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,0);
+    opacity: 1;
+  }
+}
+@keyframes fadeInUp {
+  0%   {
+    visibility: visible;
+    transform: translate(0,10px);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,0);
+    opacity: 1;
+  }
+}
+
+/*-- fade in down --*/
+@-webkit-keyframes fadeInDown {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,-10px);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadeInDown {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,-10px);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,0);
+    opacity: 1;
+  }
+}
+@keyframes fadeInDown {
+  0%   {
+    visibility: visible;
+    transform: translate(0,-10px);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,0);
+    opacity: 1;
+  }
+}
+
+/*-- slide in right --*/
+@-webkit-keyframes slideInRight {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(-300px,0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+    opacity: 1;
+  }
+}
+@-moz-keyframes slideInRight {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(-300px,0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,0);
+    opacity: 1;
+  }
+}
+@keyframes slideInRight {
+  0%   {
+    visibility: visible;
+    transform: translate(-300px,0);
+    opacity: 0;
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,0);
+    opacity: 1;
+  }
+}
+
+/*-- slide in left --*/
+@-webkit-keyframes slideInLeft {
+  0%   {
+    visibility: visible;
     -webkit-transform: translate(300px,0);
-    visibility: visible;
+    opacity: 0;
   }
   100% { 
-    -webkit-transform: translate(0,0);
     visibility: visible;
+    -webkit-transform: translate(0,0);
+    opacity: 1;
   }
 }
-@-moz-keyframes slideLeft2 {
+@-moz-keyframes slideInLeft {
   0%   {
+    visibility: visible;
     -moz-transform: translate(300px,0);
-    visibility: visible;
+    opacity: 0;
   }
   100% { 
+    visibility: visible;
     -moz-transform: translate(0,0);
-    visibility: visible;
+    opacity: 1;
   }
 }
-@-o-keyframes slideLeft2 {
+@keyframes slideInLeft {
   0%   {
-    -o-transform: translate(300px,0);
     visibility: visible;
-  }
-  100% { 
-    -o-transform: translate(0,0);
-    visibility: visible;
-  }
-}
-@keyframes slideLeft2 {
-  0%   {
     transform: translate(300px,0);
-    visibility: visible;
-  }
-  100% { 
-    transform: translate(0,0);
-    visibility: visible;
-  }
-}
-
-/*-- slide left to right animation--*/
-@-webkit-keyframes slideRight {
-  0%   {
-    -webkit-transform: translate(-300px,0);
-    visibility: visible;
-  }
-  100% { 
-    -webkit-transform: translate(0,0);
-    visibility: visible;
-  }
-}
-@-moz-keyframes slideRight {
-  0%   {
-    -moz-transform: translate(-300px,0);
-    visibility: visible;
-  }
-  100% { 
-    -moz-transform: translate(0,0);
-    visibility: visible;
-  }
-}
-@-o-keyframes slideRight {
-  0%   {
-    -o-transform: translate(-300px,0);
-    visibility: visible;
-  }
-  100% { 
-    -o-transform: translate(0,0);
-    visibility: visible;
-  }
-}
-@keyframes slideRight {
-  0%   {
-    transform: translate(-300px,0);
-    visibility: visible;
-  }
-  100% { 
-    transform: translate(0,0);
-    visibility: visible;
-  }
-}
-
-/*-- slide left to right 2 animation--*/
-@-webkit-keyframes slideRight2FadeOut {
-  0%   {
-    -webkit-transform: translate(0px,0);
-    visibility: visible;
-    opacity: 1;
-  }
-  100% { 
-    transform: translate(300px,0);
-    visibility: visible;
-    opacity: 0;
-  }
-}
-@-moz-keyframes slideRight2FadeOut {
-  0%   {
-    -moz-transform: translate(0px,0);
-    visibility: visible;
-    opacity: 1;
-  }
-  100% { 
-    transform: translate(300px,0);
-    visibility: visible;
-    opacity: 0;
-  }
-}
-@-o-keyframes slideRight2FadeOut {
-  0%   {
-    -o-transform: translate(0px,0);
-    visibility: visible;
-    opacity: 1;
-  }
-  100% { 
-    transform: translate(300px,0);
-    visibility: visible;
-    opacity: 0;
-  }
-}
-@keyframes slideRight2FadeOut {
-  0%   {
-    transform: translate(0px,0);
-    visibility: visible;
-    opacity: 1;
-  }
-  100% { 
-    transform: translate(300px,0);
-    visibility: visible;
-    opacity: 0;
-  }
-}
-
-/*-- slide up animation--*/
-@-webkit-keyframes slideUp {
-  0%   {
-    -webkit-transform: translate(0,250px);
     opacity: 0;
   }
   100% { 
-    -webkit-transform: translate(0,0);
-    opacity: 1;
-  }
-}
-@-moz-keyframes slideUp {
-  0%   {
-    -moz-transform: translate(0,250px);
-    opacity: 0;
-  }
-  100% { 
-    -moz-transform: translate(0,0);
-    opacity: 1;
-  }
-}
-@-o-keyframes slideUp {
-  0%   {
-    -o-transform: translate(0,250px);
-    opacity: 0;
-  }
-  100% { 
-    -o-transform: translate(0,0);
-    opacity: 1;
-  }
-}
-@keyframes slideUp {
-  0%   {
-    transform: translate(0,250px);
-    opacity: 0;
-  }
-  100% { 
+    visibility: visible;
     transform: translate(0,0);
     opacity: 1;
   }
 }
 
-/*-- slide down animation--*/
-@-webkit-keyframes slideDown {
+/*-- slide top --*/
+@-webkit-keyframes slideTop {
   0%   {
-    -webkit-transform: translate(0,-250px);
-    opacity: 0;
+    visibility: visible;
+    -webkit-transform: translate(0, 100%);
   }
   100% { 
-    -webkit-transform: translate(0,0);
-    opacity: 1;
-  }
-}
-@-moz-keyframes slideDown {
-  0%   {
-    -moz-transform: translate(0,-250px);
-    opacity: 0;
-  }
-  100% { 
-    -moz-transform: translate(0,0);
-    opacity: 1;
-  }
-}
-@-o-keyframes slideDown {
-  0%   {
-    -o-transform: translate(0,-250px);
-    opacity: 0;
-  }
-  100% { 
-    -o-transform: translate(0,0);
-    opacity: 1;
-  }
-}
-@keyframes slideDown {
-  0%   {
-    transform: translate(0,-250px);
-    opacity: 0;
-  }
-  100% { 
-    transform: translate(0,0);
-    opacity: 1;
-  }
-}
-
-/*-- slide down animation--*/
-@-webkit-keyframes slideDownFromZero {
-  0%   {
-    -webkit-transform: translate(0,0);
-  }
-  100% { 
-    -webkit-transform: translate(0,250px);
-  }
-}
-@-moz-keyframes slideDownFromZero {
-  0%   {
-    -moz-transform: translate(0,0);
-  }
-  100% { 
-    -moz-transform: translate(0,250px);
-  }
-}
-@-o-keyframes slideDownFromZero {
-  0%   {
-    -o-transform: translate(0,0);
-  }
-  100% { 
-    -o-transform: translate(0,250px);
-  }
-}
-@keyframes slideDownFromZero {
-  0%   {
-    transform: translate(0,0);
-  }
-  100% { 
-    transform: translate(0,250px);
-  }
-}
-/*-- roll back animation--*/
-@-webkit-keyframes rollBack {
-  0%   {
-    -webkit-transform: translate(0,0);
-  }
-  100% { 
+    visibility: visible;
     -webkit-transform: translate(0,0);
   }
 }
-@-moz-keyframes rollBack {
+@-moz-keyframes slideTop {
   0%   {
-    -moz-transform: translate(0,0);
+    visibility: visible;
+    -moz-transform: translate(0, 100%);
   }
   100% { 
+    visibility: visible;
     -moz-transform: translate(0,0);
   }
 }
-@-o-keyframes rollBack {
+@keyframes slideTop {
   0%   {
-    -o-transform: translate(0,0);
+    visibility: visible;
+    transform: translate(0, 100%);
   }
   100% { 
-    -o-transform: translate(0,0);
-  }
-}
-@keyframes rollBack {
-  0%   {
-    transform: translate(0,0);
-  }
-  100% { 
+    visibility: visible;
     transform: translate(0,0);
   }
 }
 
-/*-- hide content--*/
-@-webkit-keyframes hideContent {
+/*-- zoom fade in --*/
+@-webkit-keyframes zoomFadeIn {
   0%   {
-    visibility: hidden;
+    visibility: visible;
+    -webkit-transform: scale(0.25);
+    opacity: 0;
   }
   100% { 
-    visibility: hidden;
+    visibility: visible;
+    -webkit-transform: scale(1);
+    opacity: 1;
   }
 }
-@-moz-keyframes hideContent {
+@-moz-keyframes zoomFadeIn {
   0%   {
-    visibility: hidden;
+    visibility: visible;
+    -moz-transform: scale(0.25);
+    opacity: 0;
   }
   100% { 
-    visibility: hidden;
+    visibility: visible;
+    -moz-transform: scale(1);
+    opacity: 1;
   }
 }
-@-o-keyframes hideContent {
+@keyframes zoomFadeIn {
   0%   {
-    visibility: hidden;
+    visibility: visible;
+    transform: scale(0.25);
+    opacity: 0;
   }
   100% { 
-    visibility: hidden;
-  }
-}
-@keyframes hideContent {
-  0%   {
-    visibility: hidden;
-  }
-  100% { 
-    visibility: hidden;
+    visibility: visible;
+    transform: scale(1);
+    opacity: 1;
   }
 }
 
-/*-- slide down fade in --*/
-@-webkit-keyframes slideDownFadeIn {
+/*-- zoom fade out --*/
+@-webkit-keyframes zoomFadeOut {
   0%   {
     visibility: visible;
-    opacity: 0;
-    -webkit-transform: translate(0,-20px);
+    -webkit-transform: scale(1);
+    opacity: 1;
   }
   100% { 
     visibility: visible;
-    opacity: 1;
-    -webkit-transform: translate(0,0);
+    -webkit-transform: scale(0.25);
+    opacity: 0;
   }
 }
-@-moz-keyframes slideDownFadeIn {
+@-moz-keyframes zoomFadeOut {
   0%   {
     visibility: visible;
-    opacity: 0;
-    -moz-transform: translate(0,-20px);
+    -moz-transform: scale(1);
+    opacity: 1;
   }
   100% { 
     visibility: visible;
-    opacity: 1;
-    -moz-transform: translate(0,0);
+    -moz-transform: scale(0.25);
+    opacity: 0;
   }
 }
-@-o-keyframes slideDownFadeIn {
+@keyframes zoomFadeOut {
   0%   {
     visibility: visible;
-    opacity: 0;
-    -o-transform: translate(0,-20px);
+    transform: scale(1);
+    opacity: 1;
   }
   100% { 
     visibility: visible;
-    opacity: 1;
-    -o-transform: translate(0,0);
-  }
-}
-@keyframes slideDownFadeIn {
-  0%   {
-    visibility: visible;
+    transform: scale(0.25);
     opacity: 0;
-    transform: translate(0,-20px);
-  }
-  100% { 
-    visibility: visible;
-    opacity: 1;
-    transform: translate(0,0);
-  }
-}
-
-/*-- slide down fade out --*/
-@-webkit-keyframes slideDownFadeOut {
-  0%   {
-    visibility: visible;
-    opacity: 1;
-    -webkit-transform: translate(0,0);
-  }
-  100% { 
-    visibility: visible;
-    opacity: 0;
-    -webkit-transform: translate(0,20px);
-  }
-}
-@-moz-keyframes slideDownFadeOut {
-  0%   {
-    visibility: visible;
-    opacity: 1;
-    -moz-transform: translate(0,0);
-  }
-  100% { 
-    visibility: visible;
-    opacity: 0;
-    -moz-transform: translate(0,20px);
-  }
-}
-@-o-keyframes slideDownFadeOut {
-  0%   {
-    visibility: visible;
-    opacity: 1;
-    -o-transform: translate(0,0);
-  }
-  100% { 
-    visibility: visible;
-    opacity: 0;
-    -o-transform: translate(0,20px);
-  }
-}
-@keyframes slideDownFadeOut {
-  0%   {
-    visibility: visible;
-    opacity: 1;
-    transform: translate(0,0);
-  }
-  100% { 
-    visibility: visible;
-    opacity: 0;
-    transform: translate(0,20px);
   }
 }
 
 /*-------------------------------------------*/
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .absolute {
   position: absolute;
 }
@@ -615,44 +440,94 @@
 }
 
 .banner-container{
-  background-color: #000;
   overflow: hidden;
 }
 
-.content-container{
-  -webkit-transform: translate(300px,0);
-  -moz-transform: translate(300px,0);
-  -ms-transform: translate(300px,0);
-  -o-transform: translate(300px,0);
-  transform: translate(300px,0);
-
-  -webkit-animation: rollBack 10ms ease-in-out 0s forwards;
-  -moz-animation: rollBack 10ms ease-in-out 0s forwards;
-  -ms-animation: rollBack 10ms ease-in-out 0s forwards;
-  -o-animation: rollBack 10ms ease-in-out 0s forwards;
-  animation: rollBack 10ms ease-in-out 0s forwards;
-}
-.content{
-  -webkit-transform: translate(-300px,0);
-  -moz-transform: translate(-300px,0);
-  -ms-transform: translate(-300px,0);
-  -o-transform: translate(-300px,0);
-  transform: translate(-300px,0);
-
-  -webkit-animation: fadeIn 1s ease-in-out 1s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 1s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 1s forwards;
-  -o-animation: fadeIn 1s ease-in-out 1s forwards;
-  animation: fadeIn 1s ease-in-out 1s forwards;
-}
-
-
-.frame1-container {
+.content-hide-ie {
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   z-index: 1;
 
-  -webkit-animation: fadeIn 10ms ease-in-out 0s forwards;
-  -moz-animation: fadeIn 10ms ease-in-out 0s forwards;
-  animation: fadeIn 10ms ease-in-out 0s forwards;
+  -webkit-animation: fadeInOnly 10ms ease-in-out 0s forwards;
+  -moz-animation: fadeInOnly 10ms ease-in-out 0s forwards;
+  animation: fadeInOnly 10ms ease-in-out 0s forwards;
+}
+
+.content-container{
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.content{
+  background-color: #ffffff;
+  -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  animation: fadeIn 1s ease-in-out 0.5s forwards;
+  overflow: hidden;
+}
+.content-wrapper {
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards; 
+}
+.background {
+  background: url('./images/300x250_bg.jpg') no-repeat center center;
+
+  -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  animation: fadeIn 1s ease-in-out 0.5s forwards;
+}
+.text {
+  background: url('./images/300x250_text.png') no-repeat center center;
+  width: 173px;
+  height: 24px;
+  top: 89px;
+  left: 64px;
+
+  -webkit-animation: fadeInDown 0.5s ease-in-out 2s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 2s forwards;
+  animation: fadeInDown 0.5s ease-in-out 2s forwards;
+}
+.ring {
+  background: url('./images/300x250_ring.png') no-repeat center center;
+  width: 81px;
+  height: 88px;
+  top: 116px;
+  left: 110px;
+
+  -webkit-animation: zoomFadeIn 0.5s ease-in-out 2.75s forwards;
+  -moz-animation: zoomFadeIn 0.5s ease-in-out 2.75s forwards;
+  animation: zoomFadeIn 0.5s ease-in-out 2.75s forwards;
+}
+.logo {
+  background: url('./images/300x250_logo.png') no-repeat center center;
+  width: 113px;
+  height: 30px;
+  top: 172px;
+  left: 94px;
+
+  -webkit-animation: zoomFadeIn 0.5s ease-in-out 3.5s forwards;
+  -moz-animation: zoomFadeIn 0.5s ease-in-out 3.5s forwards;
+  animation: zoomFadeIn 0.5s ease-in-out 3.5s forwards;
+}
+.sponsor {
+  background: url('./images/300x250_sponsor.png') no-repeat center center;
+  width: 45px;
+  height: 66px;
+  top: 12px;
+  right: 9px;
+
+  -webkit-animation: fadeInDown 0.5s ease-in-out 4.25s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 4.25s forwards;
+  animation: fadeInDown 0.5s ease-in-out 4.25s forwards;
+}
+.cta {
+  background: url('./images/300x250_cta.png') no-repeat center center;
+  width: 300px;
+  height: 40px;
+  left: 0;
+  bottom: 0;
+  -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  animation: fadeIn 1s ease-in-out 0.5s forwards;
 }
